--- a/index.html
+++ b/index.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="produtos.js" defer></script>
+    <script src="index.js" defer></script>
     <link rel="stylesheet" href="index.css">
     <title>Carrinho de compras</title>
 </head>
 <body>
-    <script src="index.js"></script>
+    
 </body>
 </html>
